--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -15,32 +15,32 @@
 		<h1>
 			<a>myForm</a>
 		</h1>
-		<form id="form_1099345" class="appnitro" method="post" action="">
+		<form id="form_1099345" class="appnitro" method="post" action="" th:object="${usuario}" th:action="@{/save}">
 			<div class="form_description">
 				<h2>myForm</h2>
 				<p>This is your form description. Click here to edit.</p>
 			</div>
 			<ul>
 
-				<input id="element_0" name="element_0" type="hidden" value="" />
+				<input id="element_0" name="element_0" type="hidden" value="" th:field="*{id}" />
 
 				<li id="li_1"><label class="description" for="element_1">Name
 				</label>
 					<div>
 						<input id="element_1" name="element_1" class="element text medium"
-							type="text" maxlength="255" value="" />
+							type="text" maxlength="255" value="" th:field="*{nome}" />
 					</div></li>
 				<li id="li_2"><label class="description" for="element_2">Email
 				</label>
 					<div>
 						<input id="element_2" name="element_2" class="element text medium"
-							type="text" maxlength="255" value="" />
+							type="text" maxlength="255" value="" th:field="*{email}" />
 					</div></li>
 				<li id="li_3"><label class="description" for="element_3">Description
 				</label>
 					<div>
 						<textarea id="element_3" name="element_3"
-							class="element textarea medium"></textarea>
+							class="element textarea medium" th:field="*{descricao}"></textarea>
 					</div></li>
 
 				<li class="buttons"><input type="hidden" name="form_id"
